--- a/manifest.json
+++ b/manifest.json
@@ -3,22 +3,20 @@
   "description": "Helps keep your eyes healthy!",
   "version": "1.0",
   "manifest_version": 3,
-  "permissions": ["activeTab", "scripting"],
+  "permissions": ["storage", "tabs"],
+  "background": {
+    "service_worker": "background.js"
+  },
+  "action": {
+    "default_popup": "popup/popup.html",
+    "default_icon": "eye.png"
+  },
   "content_scripts": [
     {
-      "matches": ["https://www.google.com/*"],
-      "js": ["timer/timer.js"],
-      "run_at": "document_idle"
+      "matches": ["<all_urls>"],
+      "js": ["content/content.js"],
+      "css": ["content/content.css"],
+      "run_at": "document_end"
     }
-  ],
-  "web_accessible_resources": [
-    {
-      "resources": ["tf-inject.js", "eye.png", "libs/tf.min.js"],
-      "matches": ["<all_urls>"]
-    }
-  ],
-  "action": {
-    "default_popup": "timer/timer.html",
-    "default_icon": "eye.png"
-  }
+  ]
 }
